// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > review > postAccessRequestReviewResponse > audit > expected call 1`] = `
{
  "comment": "test comment",
  "createdAt": "2024-05-17T06:13:41.690Z",
  "decision": "approve",
  "kind": "release",
  "parentId": "66854110aab20df2b7481a82",
  "role": "mtr",
  "updatedAt": "2024-05-17T06:13:41.690Z",
  "user": "user",
}
`;

exports[`routes > review > postAccessRequestReviewResponse > missing review decision 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_union_discriminator",
          "message": "Invalid discriminator value. Expected 'approve' | 'undo' | 'request_changes'",
          "options": [
            "approve",
            "undo",
            "request_changes",
          ],
          "path": [
            "body",
            "decision",
          ],
        },
      ],
    },
    "message": "Path: body.decision - Message: Invalid discriminator value. Expected 'approve' | 'undo' | 'request_changes'",
    "name": "Bailo Error",
  },
}
`;

exports[`routes > review > postAccessRequestReviewResponse > successfully respond to a review 1`] = `
{
  "response": {
    "comment": "test comment",
    "createdAt": "2024-05-17T06:13:41.690Z",
    "decision": "approve",
    "kind": "release",
    "parentId": "66854110aab20df2b7481a82",
    "role": "mtr",
    "updatedAt": "2024-05-17T06:13:41.690Z",
    "user": "user",
  },
}
`;

exports[`routes > review > postAccessRequestReviewResponse > successfully respond to a review without a comment 1`] = `
{
  "response": {
    "comment": "test comment",
    "createdAt": "2024-05-17T06:13:41.690Z",
    "decision": "approve",
    "kind": "release",
    "parentId": "66854110aab20df2b7481a82",
    "role": "mtr",
    "updatedAt": "2024-05-17T06:13:41.690Z",
    "user": "user",
  },
}
`;
